--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Oluwatoyin Ariyo - Game & narrative designer</title>
+title: Oluwatoyin Ariyo - Game & narrative designer
 ---	
 <div class="blurb">
         <h1>Hi, I'm Oluwatoyin but you can call me Toyin!</h1>
