--- a/Games/index.html
+++ b/Games/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: games
+title: Games
 ---
 <h1>{{ page.title }}</h1>
 <p>These are the games that I have written and designed. You can play and download them on <a href="https://toyinariyo.itch.io/"my Itch page.</a></p>
