--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Oluwatoyin Ariyo - Game & narrative designer
 ---	
 <div class="blurb">
         <h1>Hi, I'm Oluwatoyin but you can call me Toyin!</h1>
-	<p>I'm a game writer, game designer and narrative designer that has written for and designed interactive narrative games, which can be found <a href="/games">here.</a></p>
+	<p>I'm a game writer, game designer and narrative designer that has written for and designed interactive narrative games, which can be found <a href="/Games">here.</a></p>
 </div><!-- /.blurb -->
