--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Oluwatoyin Ariyo - Game & narrative designer
 ---	
 <div class="blurb">
-        <h1>Hi, I'm Oluwatoyin but you can call me Toyin!</h1>
+        <h1>Hi, I'm Oluwatoyin Ariyo but you can call me Toyin Ariyo!</h1>
 	<p>I'm a game writer, game designer and narrative designer that has written for and designed interactive narrative games, which can be found <a href="/Games">here.</a></p>
 </div><!-- /.blurb -->
