--- a/Games/index.html
+++ b/Games/index.html
@@ -8,7 +8,7 @@ title: Games
 <h2><u>Games made in university:</u></h2>
 <p><b>The Green Sky</b></p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/IoClK59Rod4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p><b>ROLE:</b> Sole developer but key roles were as: programmer (UE4 Blueprints) and game designer (BSP).</p>
+<p><b>Role:</b> Sole developer but key roles were as: programmer (UE4 Blueprints), game designer (created GDD with lore + mechanics and level designer (BSP).</p>
 <p><b>Description:</b> A first person game where the player finds themselves in an abandoned hallway,
                      and must collect pick-up objects to escape. 
 </p>
