--- a/Games/index.html
+++ b/Games/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Games
 ---
 <h1>{{ page.title }}</h1>
-<p>These are the games that I have written and designed. You can play and download them on <a href="https://toyinariyo.itch.io/">my Itch page</a> (excluding the games made in university.)</p>
+<p>These are the games that I have written and designed. You can play and download them on <a href="https://toyinariyo.itch.io/">my Itch page</a> (excluding the games made in university).</p>
 <br>
 <h2><u>Games made in university:</u></h2>
 <p><b>The Green Sky</b></p>
