--- a/index.html
+++ b/index.html
@@ -6,3 +6,13 @@ title: Oluwatoyin Ariyo - Game & narrative designer
         <h1>Hi, I'm Oluwatoyin Ariyo but you can call me Toyin Ariyo!</h1>
 	<p>I'm a game writer, game designer and narrative designer that has written for and designed interactive narrative games, which can be found <a href="/Games">here.</a></p>
 </div><!-- /.blurb -->
+<br>
+<p>I have strong skills in:</p>
+<ul>
+	<li><b>Interactive narrative design:</b> <a href="https://www.pixelcrushers.com/dialogue_system/manual2x/html/logic_and_lua.html">Lua scripting</a>, 
+		<a href="https://twinery.org/">Twine</a>, <a href="https://www.inklestudios.com/ink/">Ink</a>, <a href="https://fungusgames.com/">Fungus</a>, 
+		<a href="https://www.pixelcrushers.com/dialogue-system/">Dialogue System</a>
+	</li>
+	<li><b>Unity:</b> 2D and 3D animation, cinematography, C# scripting</li>
+	<li><b>Unreal Engine:</b> Blueprints, BSP</li>
+	
