--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ title: Oluwatoyin Ariyo - Game & narrative designer
         <h1>Hi, I'm Oluwatoyin Ariyo but you can call me Toyin Ariyo!</h1>
 	<p>I'm a game writer, game designer and narrative designer that has written for and designed interactive narrative games, which can be found <a href="/Games">here.</a></p>
 </div><!-- /.blurb -->
-<br>
+<p>After graduating with a 2:1 in Computer Science, I amplified my narrative design skills by learning how to use interactive fiction tools like Twine and Ink and
+	amplified my game design skills by creating more projects in Unity. 
 <p>I have strong skills in:</p>
 <ul>
 	<li><b>Interactive narrative design:</b> <a href="https://www.pixelcrushers.com/dialogue_system/manual2x/html/logic_and_lua.html">Lua scripting</a>, 
@@ -15,4 +16,4 @@ title: Oluwatoyin Ariyo - Game & narrative designer
 	</li>
 	<li><b>Unity:</b> 2D and 3D animation, cinematography, C# scripting</li>
 	<li><b>Unreal Engine:</b> Blueprints, BSP</li>
-	
+</ul>
