--- a/CV/index.html
+++ b/CV/index.html
@@ -5,6 +5,7 @@ title: Oluwatoyin Ariyo CV
 
 <div class="cv">
 		<a href="#" class="download" title="Download CV as PDF">Download CV</a>	
+	<h1>Oluwatoyin Ariyo</h1>
     <h2>Skills</h2>
     <p><strong>Interactive narrative design:</strong> <a href="https://www.pixelcrushers.com/dialogue_system/manual2x/html/logic_and_lua.html">Lua scripting</a>, 
                <a href="https://twinery.org/">Twine</a>, <a href="https://www.inklestudios.com/ink/">Ink</a>, <a href="https://fungusgames.com/">Fungus</a>, 
@@ -16,9 +17,8 @@ title: Oluwatoyin Ariyo CV
     <p><strong>Unreal Engine:</strong> Blueprints.</p>
     <br>
     <h2>Education</h2>
-    <p><strong>University of Westminster</strong> - Computer Science Upper Class Honours Bsc. 
-    <p><i>September 2015 - July 2019</i>
-    <b>Relevant Modules (Coursework):</b>
+    <p><strong>University of Westminster</strong> - Computer Science Upper Class Honours Bsc - <i>September 2015 - July 2019</i>.</p>
+    <p><b>Relevant Modules (Coursework):</b></p>
     <p>Game Engine Architecture is a module I did in my second year where I developed an Unreal Engine game where you collect pick-up objects.
        Video link: https://youtu.be/IoClK59Rod4</p>
     <p>Advanced Interactive Media Development is a module I did in my third year where I developed a Unity game where you play as a waiter, 
