--- a/CV/index.html
+++ b/CV/index.html
@@ -17,14 +17,14 @@ title: Oluwatoyin Ariyo CV
     <p><strong>Unreal Engine:</strong> Blueprints.</p>
     <br>
     <h2>Education</h2>
-    <p><strong>University of Westminster</strong> - Computer Science Upper Class Honours Bsc - <i>September 2015 - July 2019</i>.</p>
+    <p><strong>University of Westminster</strong> - Computer Science Upper Second Class Honours Bsc - <i>September 2015 - July 2019</i>.</p>
     <p><b>Relevant Modules (Coursework):</b></p>
     <p>Game Engine Architecture is a module I did in my second year where I developed an Unreal Engine game where you collect pick-up objects.
-       Video link: https://youtu.be/IoClK59Rod4</p>
+       Video link: <a href="https://youtu.be/IoClK59Rod4"></p>
     <p>Advanced Interactive Media Development is a module I did in my third year where I developed a Unity game where you play as a waiter, 
-       and must talk interactively to customers and get their orders. Video link: https://www.youtube.com/watch?v=KcBMFi9_6eM</p>
+       and must talk interactively to customers and get their orders. Video link: <a href="https://www.youtube.com/watch?v=KcBMFi9_6eM"></p>
     <p>Senior Project/Dissertation: Earned a 2:1 developing and writing an adventure game made in Unity about a private investigator that solves crimes in his apartment.
-       Video link: https://youtu.be/cYwyeoagVSI </p>
+       Video link: <a href="https://youtu.be/cYwyeoagVSI"></p>
      <br>
      <h2>Hobbies</h2>
      <ul>
