--- a/Games/index.html
+++ b/Games/index.html
@@ -7,28 +7,28 @@ title: Games
 <br>
 <p><b>An Awesome Car Chase</b></p>
 <iframe frameborder="0" src="https://itch.io/embed/691567" width="552" height="167"><a href="https://toyinariyo.itch.io/an-awesome-car-chase">An Awesome Car Chase by toyinariyo</a></iframe>
-<p><b>Role:</b> Narrative designer and writer (Twine).</p>
+<p><b>Role:</b> Narrative designer and writer (Twine) - Solo.</p>
 <p><b>Description:</b> A short action-filled interactive fiction made in Twine where you steal a mysterious object
                        and are caught up in a chaotic car/giant robot chase.
 </p>
 <br>
 <p><b>A Magical Chase</b></p>
 <iframe frameborder="0" src="https://itch.io/embed/719493" width="552" height="167"><a href="https://toyinariyo.itch.io/a-magical-chase">A Magical Chase by toyinariyo</a></iframe>
-<p><b>Role:</b> Narrative designer and writer (Ink).</p>
+<p><b>Role:</b> Narrative designer and writer (Ink) - Solo.</p>
 <p><b>Description:</b> A short action-filled interactive fiction made in Ink where you are involved in a chase and you can use spells/potions to your advantage. 
                        Made by myself in a day for inkJam 2020.
 </p>
 <br>
 <p><b>The Glitching Graduation</b></p>
 <iframe frameborder="0" src="https://itch.io/embed/836314" width="552" height="167"><a href="https://toyinariyo.itch.io/the-glitching-graduation">The Glitching Graduation by toyinariyo</a></iframe>
-<p><b>Role:</b> Game designer, Programmer (Lua) and story editor.</p>
+<p><b>Role:</b> Game designer, Programmer (Lua) and story editor - Team.</p>
 <p><b>Description:</b> A visual novel developed in Unity where the player is stuck in a time loop with three other fellow students 
                        and has to figure out a way to break out of the time loop.
 </p>
 <br>
 <p><b>The Distracted Spy (in development)</b></p>
 <iframe frameborder="0" src="https://itch.io/embed/529617" width="552" height="167"><a href="https://toyinariyo.itch.io/the-distracted-spy">The Distracted Spy by toyinariyo</a></iframe>
-<p><b>Role:</b> Narrative designer, writer (Ink) and game designer (Fungus).</p>
+<p><b>Role:</b> Narrative designer, writer (Ink) and game designer (Fungus) - Solo.</p>
 <p><b>Description:</b> An interactive fiction/visual novel game written in Ink where the player is a spy that goes on a mission to stop a hacker from leaking secrets.</p>
 <p>Visual novel demo:</p>
 <iframe frameborder="0" src="https://itch.io/embed/753845" width="552" height="167"><a href="https://toyinariyo.itch.io/the-distracted-spy-fungus-demo">The Distracted Spy Fungus demo by toyinariyo</a></iframe>
