--- a/CV/index.html
+++ b/CV/index.html
@@ -20,11 +20,11 @@ title: Oluwatoyin Ariyo CV
     <p><strong>University of Westminster</strong> - Computer Science Upper Second Class Honours Bsc - <i>September 2015 - July 2019</i>.</p>
     <p><b>Relevant Modules (Coursework):</b></p>
     <p>Game Engine Architecture is a module I did in my second year where I developed an Unreal Engine game where you collect pick-up objects.
-	    Video link <a href="https://youtu.be/IoClK59Rod4"> here:</a></p>
+	    Video link <a href="https://youtu.be/IoClK59Rod4"> here.</a></p>
     <p>Advanced Interactive Media Development is a module I did in my third year where I developed a Unity game where you play as a waiter, 
-       and must talk interactively to customers and get their orders. Video link <a href="https://www.youtube.com/watch?v=KcBMFi9_6eM"> here: </a></p>
+       and must talk interactively to customers and get their orders. Video link <a href="https://www.youtube.com/watch?v=KcBMFi9_6eM"> here. </a></p>
     <p>Senior Project/Dissertation: Earned a 2:1 developing and writing an adventure game made in Unity about a private investigator that solves crimes in his apartment.
-	    Video link <a href="https://youtu.be/cYwyeoagVSI"> here:</a></p>
+	    Video link <a href="https://youtu.be/cYwyeoagVSI"> here.</a></p>
      <br>
      <h2>Hobbies</h2>
      <ul>
@@ -32,4 +32,10 @@ title: Oluwatoyin Ariyo CV
      <li>Following game development tutorials and courses.</li>
      <li>Volunteering as tech support to help people with software issues.</li>
      </ul>
+    <br>
+    <h2>Game Writing Samples</h2>
+    <p>Below is a link to a PDF showing a sample of the game writing that I have contributed to. These samples include writing done in interactive fiction and writing done for
+	    a game spec script.</p>
+    <a href="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Oluwatoyin Ariyo Game Writing Samples.pdf" class="downloadsample" title="Download writing samples as PDF">Download Game Writing Samples</a>
+    <p>If you'd like to see more game writing samples, do not hesistate to <a href="mailto:toyinariyo66@gmail.com">email me here.</a></p>
  </div>
