--- a/Games/index.html
+++ b/Games/index.html
@@ -5,7 +5,7 @@ title: Games
 <h1>{{ page.title }}</h1>
 <p>These are the games that I have written and designed. You can play and download them on <a href="https://toyinariyo.itch.io/">my Itch page.</a></p>
 <br>
-<p><b><a href="/An Awesome Car Chase">An Awesome Car Chase</a></b></p>
+<p><b><a href="/Games/An Awesome Car Chase">An Awesome Car Chase</a></b></p>
 <iframe frameborder="0" src="https://itch.io/embed/691567" width="552" height="167"><a href="https://toyinariyo.itch.io/an-awesome-car-chase">An Awesome Car Chase by toyinariyo</a></iframe>
 <p><b>Role:</b> Narrative designer and writer (Twine) - Solo.</p>
 <p><b>Description:</b> A short action-filled interactive fiction made in Twine where you steal a mysterious object
