--- a/Games/An Awesome Car Chase/index.html
+++ b/Games/An Awesome Car Chase/index.html
@@ -3,7 +3,7 @@ layout: default
 title: An Awesome Car Chase
 ---
 <h1>{{ page.title }}</h1>
-<iframe src="https://giphy.com/embed/x1e0HIHcFSz3lugz8p" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/x1e0HIHcFSz3lugz8p">via GIPHY</a></p>
+<iframe src="https://giphy.com/embed/x1e0HIHcFSz3lugz8p" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/x1e0HIHcFSz3lugz8p">via GIPHY (click on GIF and press full screen to have better view)</a></p>
 <br>
 <p>This project was started to sharpen my Twine skills and after watching Transformers, I decided to create an action-paced game about the player stealing an alien device
     that gives them access to a futuristic car that allows them to fight off against goons who are after the device.</p>
