--- a/Games/An Awesome Car Chase/index.html
+++ b/Games/An Awesome Car Chase/index.html
@@ -7,4 +7,6 @@ title: An Awesome Car Chase
 <br>
 <p>This project was started to sharpen my Twine skills and after watching Transformers, I decided to create an action-paced game about the player stealing an alien device
     that gives them access to a futuristic car that allows them to fight off against goons who are after the device.</p>
+<p>This Twine story was made in the Sugarcube story format and contains 20 passages and 31 links. It uses special Sugarcube display macros such as <a href="https://www.motoslave.net/sugarcube/2/docs/#macros-macro-type">type</a> to display the typewriter and uses custom Sugarcube code for <a href="https://qjzhvmqlzvoo5lqnrvuhmg-on.drv.tw/UInv/Sample_Code.html#Glitchy%20Text">the glitchy text</a> and <a href="https://qjzhvmqlzvoo5lqnrvuhmg-on.drv.tw/UInv/Sample_Code.html#Delayed%20and%20Blinky%20Text">the blinky text</a>.</p>
+<p>The game can be played <a href="https://toyinariyo.itch.io/an-awesome-car-chase">here</a>.</p>
     
