Adding level design to skills
Adding level design to Unity and Unreal Engine skills - ProBuilder and BSP respectively.

--- a/CV/index.html
+++ b/CV/index.html
@@ -13,8 +13,8 @@ title: Oluwatoyin Ariyo CV
     </p>
     <p><strong>Basic character animation:</strong> Unity Animator, Autodesk MotionBuilder, Mixamo.</p>
     <p><strong>Very basic 3D modelling:</strong> Blender, ProBuilder.</p>
-    <p><strong>Unity:</strong> 2D animation and 3D animation, C# scripting, cinematography.</p>
-    <p><strong>Unreal Engine:</strong> Blueprints.</p>
+    <p><strong>Unity:</strong> 2D animation and 3D animation, C# scripting, cinematography, level design (ProBuilder).</p>
+    <p><strong>Unreal Engine:</strong> Blueprints, level design (BSP).</p>
     <br>
     <h2>Education</h2>
     <p><strong>University of Westminster</strong> - Computer Science Upper Second Class Honours Bsc - <i>September 2015 - July 2019</i>.</p>
@@ -30,6 +30,7 @@ title: Oluwatoyin Ariyo CV
      <ul>
      <li>Worldbuilding for original stories</li>
      <li>Following game development tutorials and courses.</li>
+     <li>Playing indie single player games.</li>
      <li>Volunteering as tech support to help people with software issues.</li>
      </ul>
     <br>
