Adding two Unity games onto Games page
Adding The Unsolved Mysteries of London and Star Clicker onto Games page.

--- a/Games/index.html
+++ b/Games/index.html
@@ -26,6 +26,18 @@ title: Games
                        and has to figure out a way to break out of the time loop.
 </p>
 <br>
+<p><b>The Unsolved Mysteries of London</b></p>
+<iframe frameborder="0" src="https://itch.io/embed/894589" width="552" height="167"><a href="https://toyinariyo.itch.io/the-unsolved-mysteries-of-london">The Unsolved Mysteries of London by toyinariyo</a></iframe>
+<p><b>Role: </b> Programmer (C#, Lua), Game designer (Dialogue System), level designer (ProBuilder), cinematographer and narrative designer (Dialogue System) - Solo.</p>
+<p><b>Description: </b> An adventure game developed in Unity inspired by Subsurface Circular where the player is a private investigator that must solve
+                        crimes in his apartment. 
+</p>
+<br>
+<p><b>Star Clicker</b></p>
+<iframe frameborder="0" src="https://itch.io/embed/920823" width="552" height="167"><a href="https://toyinariyo.itch.io/star-clicker">Star Clicker by toyinariyo</a></iframe>
+<p><b>Role: </b> Programmer (C#) - Solo.</p>
+<p><b>Description: </b> A simple clicker game created in Unity where the player has to click on all of the stars to complete the game.</p>
+<br>
 <p><b>The Distracted Spy (in development)</b></p>
 <iframe frameborder="0" src="https://itch.io/embed/529617" width="552" height="167"><a href="https://toyinariyo.itch.io/the-distracted-spy">The Distracted Spy by toyinariyo</a></iframe>
 <p><b>Role:</b> Narrative designer, writer (Ink) and game designer (Fungus) - Solo.</p>
