Adding timer to Star Clicker description

--- a/Games/index.html
+++ b/Games/index.html
@@ -36,7 +36,7 @@ title: Games
 <p><b>Star Clicker</b></p>
 <iframe frameborder="0" src="https://itch.io/embed/920823" width="552" height="167"><a href="https://toyinariyo.itch.io/star-clicker">Star Clicker by toyinariyo</a></iframe>
 <p><b>Role: </b> Programmer (C#) - Solo.</p>
-<p><b>Description: </b> A simple clicker game created in Unity where the player has to click on all of the stars to complete the game.</p>
+<p><b>Description: </b> A simple clicker game created in Unity where the player has to click on all of the stars to complete the game before the timer runs out.</p>
 <br>
 <p><b>The Distracted Spy (in development)</b></p>
 <iframe frameborder="0" src="https://itch.io/embed/529617" width="552" height="167"><a href="https://toyinariyo.itch.io/the-distracted-spy">The Distracted Spy by toyinariyo</a></iframe>
