--- a/Games/index.html
+++ b/Games/index.html
@@ -5,6 +5,13 @@ title: Games
 <h1>{{ page.title }}</h1>
 <p>These are the games that I have written and designed. You can play and download them on <a href="https://toyinariyo.itch.io/">my Itch page.</a></p>
 <br>
+p><b><a href="/Games/The Glitching Graduation">The Glitching Graduation</a></b></p>
+<iframe frameborder="0" src="https://itch.io/embed/836314" width="552" height="167"><a href="https://toyinariyo.itch.io/the-glitching-graduation">The Glitching Graduation by toyinariyo</a></iframe>
+<p><b>Role:</b> Game designer, Programmer (Lua) and story editor - Team.</p>
+<p><b>Description:</b> A visual novel developed in Unity where the player is stuck in a time loop with three other fellow students 
+                       and has to figure out a way to break out of the time loop.
+</p>
+<br>
 <p><b><a href="/Games/An Awesome Car Chase">An Awesome Car Chase</a></b></p>
 <iframe frameborder="0" src="https://itch.io/embed/691567" width="552" height="167"><a href="https://toyinariyo.itch.io/an-awesome-car-chase">An Awesome Car Chase by toyinariyo</a></iframe>
 <p><b>Role:</b> Narrative designer and writer (Twine) - Solo.</p>
@@ -17,13 +24,6 @@ title: Games
 <p><b>Role:</b> Narrative designer and writer (Ink) - Solo.</p>
 <p><b>Description:</b> A short action-filled interactive fiction made in Ink where you are involved in a chase and you can use spells/potions to your advantage. 
                        Made by myself in a day for inkJam 2020.
-</p>
-<br>
-<p><b>The Glitching Graduation</b></p>
-<iframe frameborder="0" src="https://itch.io/embed/836314" width="552" height="167"><a href="https://toyinariyo.itch.io/the-glitching-graduation">The Glitching Graduation by toyinariyo</a></iframe>
-<p><b>Role:</b> Game designer, Programmer (Lua) and story editor - Team.</p>
-<p><b>Description:</b> A visual novel developed in Unity where the player is stuck in a time loop with three other fellow students 
-                       and has to figure out a way to break out of the time loop.
 </p>
 <br>
 <p><b>The Unsolved Mysteries of London</b></p>
