--- a/Games/index.html
+++ b/Games/index.html
@@ -5,7 +5,7 @@ title: Games
 <h1>{{ page.title }}</h1>
 <p>These are the games that I have written and designed. You can play and download them on <a href="https://toyinariyo.itch.io/">my Itch page.</a></p>
 <br>
-p><b><a href="/Games/The Glitching Graduation">The Glitching Graduation</a></b></p>
+<p><b><a href="/Games/The Glitching Graduation">The Glitching Graduation</a></b></p>
 <iframe frameborder="0" src="https://itch.io/embed/836314" width="552" height="167"><a href="https://toyinariyo.itch.io/the-glitching-graduation">The Glitching Graduation by toyinariyo</a></iframe>
 <p><b>Role:</b> Game designer, Programmer (Lua) and story editor - Team.</p>
 <p><b>Description:</b> A visual novel developed in Unity where the player is stuck in a time loop with three other fellow students 
