Remove width and height of AdvXJam 2020 Concept

--- a/Games/The Glitching Graduation/index.html
+++ b/Games/The Glitching Graduation/index.html
@@ -8,7 +8,7 @@ title: The Glitching Graduation
 <h3><u>Concept</u></h3>
 <p>This project was developed as a game for AdvXJam and the theme of this jam was "A Good Time." I collaborated with writers, sound designers + artists and we agreed to make a visual novel in Unity that would
    center on young adults going through a timeloop around their graduation day.</p>
-<a href="#"> <img src="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/AdvXJam 2020 Concept.PNG" width="1900" height="600"></a>
+<a href="#"> <img src="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/AdvXJam 2020 Concept.PNG"></a>
 <h3><u>Implementation</u></h3>
 <p>We agreed to use Unity as the game engine and Pixel Crushers Dialogue System as the interactive dialogue tool because I had prior experience with it and I knew that if
    something were to go wrong during development, I could get it fixed since the tool has detailed documentation and excellent customer support. This was my first time
