Include image with link for Star Clicker

--- a/Games/index.html
+++ b/Games/index.html
@@ -7,7 +7,7 @@ title: Games
 <br>
 <p><b><a href="/Games/The Glitching Graduation">The Glitching Graduation</a></b></p>
 <iframe frameborder="0" src="https://itch.io/embed/836314" width="552" height="167"><a href="https://toyinariyo.itch.io/the-glitching-graduation">The Glitching Graduation by toyinariyo</a></iframe>
-<p><b>Role:</b> Game designer, Programmer (Lua) and story editor - Team.</p>
+<p><b>Role:</b> Game designer (Pixel Crushers Dialogue System), Programmer (Lua) and story editor (Pixel Crushers Dialogue System) - Team.</p>
 <p><b>Description:</b> A visual novel developed in Unity where the player is stuck in a time loop with three other fellow students 
                        and has to figure out a way to break out of the time loop.
 </p>
@@ -28,13 +28,13 @@ title: Games
 <br>
 <p><b>The Unsolved Mysteries of London</b></p>
 <iframe frameborder="0" src="https://itch.io/embed/894589" width="552" height="167"><a href="https://toyinariyo.itch.io/the-unsolved-mysteries-of-london">The Unsolved Mysteries of London by toyinariyo</a></iframe>
-<p><b>Role: </b> Programmer (C#, Lua), Game designer (Dialogue System), level designer (ProBuilder), cinematographer and narrative designer (Dialogue System) - Solo.</p>
+<p><b>Role: </b> Programmer (C#, Lua), Game designer (Pixel Crushers Dialogue System), level designer (ProBuilder), cinematographer and narrative designer (Pixel Crushers Dialogue System) - Solo.</p>
 <p><b>Description: </b> An adventure game developed in Unity inspired by Subsurface Circular where the player is a private investigator that must solve
                         crimes in his apartment. 
 </p>
 <br>
 <p><b>Star Clicker</b></p>
-<iframe frameborder="0" src="https://itch.io/embed/920823" width="552" height="167"><a href="https://toyinariyo.itch.io/star-clicker">Star Clicker by toyinariyo</a></iframe>
+<a href="https://toyinariyo.itch.io/star-clicker"><img src="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Star Clicker Main Menu.PNG"></a>
 <p><b>Role: </b> Programmer (C#) - Solo.</p>
 <p><b>Description: </b> A simple clicker game created in Unity where the player has to click on all of the stars to complete the game before the timer runs out.</p>
 <br>
