Add image for Distracted Spy Fungus

--- a/Games/index.html
+++ b/Games/index.html
@@ -40,8 +40,8 @@ title: Games
 <br>
 <p><b>The Distracted Spy (in development)</b></p>
 <iframe frameborder="0" src="https://itch.io/embed/529617" width="552" height="167"><a href="https://toyinariyo.itch.io/the-distracted-spy">The Distracted Spy by toyinariyo</a></iframe>
-<p><b>Role:</b> Narrative designer, writer (Ink) and game designer (Fungus) - Solo.</p>
+<p><b>Role:</b> Narrative designer, writer (Ink) - Solo.</p>
 <p><b>Description:</b> An interactive fiction/visual novel game written in Ink where the player is a spy that goes on a mission to stop a hacker from leaking secrets.</p>
 <p>Visual novel demo:</p>
-<iframe frameborder="0" src="https://itch.io/embed/753845" width="552" height="167"><a href="https://toyinariyo.itch.io/the-distracted-spy-fungus-demo">The Distracted Spy Fungus demo by toyinariyo</a></iframe>
-<p>Developed in <a href="https://fungusgames.com/">Fungus</a> showing a conversation from Chapter 1.</p>
+<a href="https://toyinariyo.itch.io/the-distracted-spy-fungus-demo"><img src="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Distracted Spy Fungus screenshot 1.PNG"></a>
+<p>Developed in <a href="https://fungusgames.com/">Fungus</a> showing a conversation from Chapter 1 by using Picrew character sprites.</p>
