Make PNG lowercase

--- a/Games/index.html
+++ b/Games/index.html
@@ -43,5 +43,5 @@ title: Games
 <p><b>Role:</b> Narrative designer, writer (Ink) - Solo.</p>
 <p><b>Description:</b> An interactive fiction/visual novel game written in Ink where the player is a spy that goes on a mission to stop a hacker from leaking secrets.</p>
 <p>Visual novel demo:</p>
-<a href="https://toyinariyo.itch.io/the-distracted-spy-fungus-demo"><img src="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Distracted Spy Fungus Screenshot 1.PNG"></a>
+<a href="https://toyinariyo.itch.io/the-distracted-spy-fungus-demo"><img src="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Distracted Spy Fungus Screenshot 1.png"></a>
 <p>Developed in <a href="https://fungusgames.com/">Fungus</a> showing a conversation from Chapter 1 by using Picrew character sprites.</p>
