Include link to itchio page

--- a/Games/The Glitching Graduation/index.html
+++ b/Games/The Glitching Graduation/index.html
@@ -27,4 +27,5 @@ title: The Glitching Graduation
  <li>OpenGameArt - background art.</li>
 </ul>
 <h3><u>Status of the game</u></h3>
-<p>Right now, the game is 75% complete as it has a rushed ending so I could submit the game before the deadline. I aim to give the game a proper ending in the near future.</p>
+<p>Right now, the game is 75% complete as it has a rushed ending so I could submit the game before the deadline. I aim to give the game a proper ending in the near future. You can
+    download the game <a href="https://toyinariyo.itch.io/the-glitching-graduation">here</a>.</p>
