Streamlined first paragraph of homepage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Oluwatoyin Ariyo - Game designer & narrative designer
 ---	
 <div class="blurb">
         <h1>Hi, I'm Oluwatoyin Ariyo but you can call me Toyin Ariyo!</h1>
-	<p>I'm a game writer, game designer, game programmer and narrative designer that has written, programmed and designed interactive narrative games, which can be found <a href="/Games">here.</a></p>
+	<p>I'm a game designer that enjoys solving logic and narrative problems in order to create compelling, interactive narrative games, which can be found <a href="/Games">here.</a></p>
 </div><!-- /.blurb -->
 <p>After graduating with a 2:1 in Computer Science, I amplified my narrative design skills by learning how to use interactive fiction tools like Twine and Ink and
 	amplified my game design and programming skills by creating interactive narrative projects in Unity. </p>
