Removed link to Distracted Spy Ink story

--- a/Games/index.html
+++ b/Games/index.html
@@ -12,6 +12,11 @@ title: Games
                        and has to figure out a way to break out of the time loop.
 </p>
 <br>
+<p><b>Star Clicker</b></p>
+<a href="https://toyinariyo.itch.io/star-clicker"><img src="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Star Clicker Main Menu.PNG"></a>
+<p><b>Role: </b> Programmer (C#) - Solo.</p>
+<p><b>Description: </b> A simple clicker game created in Unity where the player has to click on all of the stars to complete the game before the timer runs out.</p>
+<br>
 <p><b><a href="/Games/An Awesome Car Chase">An Awesome Car Chase</a></b></p>
 <iframe frameborder="0" src="https://itch.io/embed/691567" width="552" height="167"><a href="https://toyinariyo.itch.io/an-awesome-car-chase">An Awesome Car Chase by toyinariyo</a></iframe>
 <p><b>Role:</b> Narrative designer and writer (Twine) - Solo.</p>
@@ -26,22 +31,15 @@ title: Games
                         crimes in his apartment. 
 </p>
 <br>
+<p><b>The Distracted Spy visual novel prototype</p>
+<a href="https://toyinariyo.itch.io/the-distracted-spy-fungus-demo"><img src="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Distracted Spy Fungus Screenshot 1.png" width="900" height="500"></a>
+<p><b>Role:</b> Narrative designer & game designer (Fungus)</p>
+<p><b>Description:</b> An visual novel demo made in Unity where a MI6 agent has a conversation with their friend that ranges on important topics from antiblackness to being neurodivergent in the workplace.
+       Characters are represented by Picrew character sprites.</p>
+<br>
 <p><b>A Magical Chase</b></p>
 <iframe frameborder="0" src="https://itch.io/embed/719493" width="552" height="167"><a href="https://toyinariyo.itch.io/a-magical-chase">A Magical Chase by toyinariyo</a></iframe>
 <p><b>Role:</b> Narrative designer and writer (Ink) - Solo.</p>
 <p><b>Description:</b> A short action-filled interactive fiction made in Ink where you are involved in a chase and you can use spells/potions to your advantage. 
                        Made by myself in a day for inkJam 2020.
 </p>
-<br>
-<p><b>Star Clicker</b></p>
-<a href="https://toyinariyo.itch.io/star-clicker"><img src="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Star Clicker Main Menu.PNG"></a>
-<p><b>Role: </b> Programmer (C#) - Solo.</p>
-<p><b>Description: </b> A simple clicker game created in Unity where the player has to click on all of the stars to complete the game before the timer runs out.</p>
-<br>
-<p><b>The Distracted Spy (in development)</b></p>
-<iframe frameborder="0" src="https://itch.io/embed/529617" width="552" height="167"><a href="https://toyinariyo.itch.io/the-distracted-spy">The Distracted Spy by toyinariyo</a></iframe>
-<p><b>Role:</b> Narrative designer, writer (Ink) - Solo.</p>
-<p><b>Description:</b> An interactive fiction/visual novel game written in Ink where the player is a spy that goes on a mission to stop a hacker from leaking secrets.</p>
-<p>Visual novel demo:</p>
-<a href="https://toyinariyo.itch.io/the-distracted-spy-fungus-demo"><img src="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Distracted Spy Fungus Screenshot 1.png" width="900" height="500"></a>
-<p>Developed in <a href="https://fungusgames.com/">Fungus</a> showing a conversation from Chapter 1 by using Picrew character sprites.</p>
