Edit status to show its finished but story needs to be refined

--- a/Games/The Glitching Graduation/index.html
+++ b/Games/The Glitching Graduation/index.html
@@ -19,13 +19,13 @@ title: The Glitching Graduation
 <a href="#"> <img src="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/The Glitching Graduation Screenshot 2.PNG" width="600" height="600"></a> 
 <h3><u>Credits</u></h3>
 <ul>
- <li>Toyin Ariyo - game designer, programmer + story editor.</li>
+ <li>Toyin Ariyo - game designer, scripter + story editor.</li>
  <li>George Larkwright - writer.</li>
  <li>Andrew McKissock - writer.</li>
  <li>Eliana - sound designer.</li>
  <li>Amanda Parker - character artist.</li>
- <li>OpenGameArt - background art.</li>
+ <li>OpenGameArt (frances) - background art.</li>
 </ul>
 <h3><u>Status of the game</u></h3>
-<p>Right now, the game is 75% complete as it has a rushed ending so I could submit the game before the deadline. I aim to give the game a proper ending in the near future. You can
+<p>Right now, the ending is very rushed (prose is used to show ending instead of dialogue) as I had to submit a completed version of a story at the deadline. However, I plan to refine the ending in the near future. You can
     download the game <a href="https://toyinariyo.itch.io/the-glitching-graduation">here</a>.</p>
