Refine description for Distracted Spy

--- a/Games/index.html
+++ b/Games/index.html
@@ -33,8 +33,8 @@ title: Games
 <br>
 <p><b>The Distracted Spy visual novel prototype</b></p>
 <a href="https://toyinariyo.itch.io/the-distracted-spy-fungus-demo"><img src="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Distracted Spy Fungus Screenshot 1.png" width="900" height="500"></a>
-<p><b>Role:</b> Narrative designer & game designer (Fungus)</p>
-<p><b>Description:</b> An visual novel demo made in Unity where a MI6 agent has a conversation with their friend that ranges on important topics from antiblackness to being neurodivergent in the workplace.
+<p><b>Role:</b> Narrative designer & game designer (Fungus) - Solo.</p>
+<p><b>Description:</b> A quick visual novel demo made in Unity where a MI6 agent has a conversation with their friend that ranges on important topics from antiblackness to being neurodivergent in the workplace.
        Characters are represented by Picrew character sprites.</p>
 <br>
 <p><b>A Magical Chase</b></p>
