--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Oluwatoyin Ariyo - Game designer & narrative designer
+title: Oluwatoyin Ariyo - Game developer
 ---	
 <div class="blurb">
         <h1>Hi, I'm Oluwatoyin Ariyo but you can call me Toyin Ariyo!</h1>
