Removed Computer Science degree mention

--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ title: Oluwatoyin Ariyo
         <h1>Hi, I'm Oluwatoyin Ariyo but you can call me Toyin Ariyo!</h1>
 	<p>I'm a game designer + software developer that enjoys creating compelling, interactive narrative games, which can be found <a href="/Games">here.</a></p>
 </div><!-- /.blurb -->
-<p>After graduating with a 2:1 in Computer Science, I amplified my game design skills by creating interactive narrative projects in Unity and amplified my programming skills by creating various projects in different programming languages which can be found <a href="https://github.com/toyinariyo">here.</a></p>
+<p>I have also created various non-game projects which can be found <a href="https://github.com/toyinariyo">here.</a></p>
