--- a/CV/index.html
+++ b/CV/index.html
@@ -7,24 +7,16 @@ title: Oluwatoyin Ariyo CV
 		<a href="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Oluwatoyin Ariyo Game Designer & Narrative Designer CV.pdf" class="download" title="Download CV as PDF">Download CV</a>	
 	<h1>Oluwatoyin Ariyo</h1>
     <h2>Skills</h2>
-    <p><strong>Interactive narrative design:</strong> <a href="https://www.pixelcrushers.com/dialogue_system/manual2x/html/logic_and_lua.html">Lua scripting</a>, 
-               <a href="https://twinery.org/">Twine</a>, <a href="https://www.inklestudios.com/ink/">Ink</a>, <a href="https://fungusgames.com/">Fungus</a>, 
-               <a href="https://www.pixelcrushers.com/dialogue-system/">Dialogue System</a>.
-    </p>
-    <p><strong>Basic character animation:</strong> Unity Animator, Autodesk MotionBuilder, Mixamo.</p>
-    <p><strong>Very basic 3D modelling:</strong> Blender, ProBuilder.</p>
-    <p><strong>Unity:</strong> 2D animation and 3D animation, C# scripting, cinematography, level design (ProBuilder).</p>
-    <p><strong>Unreal Engine:</strong> Blueprints, level design (BSP).</p>
+	<p><strong>HTML</strong></p>
+	<p><strong>CSS</strong></p>
+	<p><strong>C# scripting</strong></p>
+        <p><strong>Unity</strong></p>
+	<p><strong>WordPress</strong></p>
+	<p><strong>Adobe XD</strong></p>
+	<p><strong>Figma</strong></p>
     <br>
     <h2>Education</h2>
     <p><strong>University of Westminster</strong> - Computer Science Upper Second Class Honours Bsc - <i>September 2015 - July 2019</i>.</p>
-    <p><b>Relevant Modules (Coursework):</b></p>
-    <p>Game Engine Architecture is a module I did in my second year where I developed an Unreal Engine game where you collect pick-up objects.
-	    Video link <a href="https://youtu.be/IoClK59Rod4"> here.</a></p>
-    <p>Advanced Interactive Media Development is a module I did in my third year where I developed a Unity game where you play as a waiter, 
-       and must talk interactively to customers and get their orders. Video link <a href="https://www.youtube.com/watch?v=KcBMFi9_6eM"> here. </a></p>
-    <p>Senior Project/Dissertation: Earned a 2:1 developing and writing an adventure game made in Unity about a private investigator that solves crimes in his apartment.
-	    Video link <a href="https://youtu.be/cYwyeoagVSI"> here.</a></p>
      <br>
      <h2>Hobbies</h2>
      <ul>
