Removed Game Writing Samples
Also replaced skills paragraphs with bullet points for each skill.

--- a/CV/index.html
+++ b/CV/index.html
@@ -7,13 +7,15 @@ title: Oluwatoyin Ariyo CV
 		<a href="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Oluwatoyin Ariyo Game Designer & Narrative Designer CV.pdf" class="download" title="Download CV as PDF">Download CV</a>	
 	<h1>Oluwatoyin Ariyo</h1>
     <h2>Skills</h2>
-	<p><strong>HTML</strong></p>
-	<p><strong>CSS</strong></p>
-	<p><strong>C# scripting</strong></p>
-        <p><strong>Unity</strong></p>
-	<p><strong>WordPress</strong></p>
-	<p><strong>Adobe XD</strong></p>
-	<p><strong>Figma</strong></p>
+    <ul>
+     <li>HTML</li>
+     <li>CSS</li>
+     <li>C# scripting</li>
+     <li>Unity</li>
+     <li>WordPress</li>
+     <li>Python</li>
+     <li>Adobe XD</li>
+     <li>Figma</li>
     <br>
     <h2>Education</h2>
     <p><strong>University of Westminster</strong> - Computer Science Upper Second Class Honours Bsc - <i>September 2015 - July 2019</i>.</p>
@@ -25,10 +27,4 @@ title: Oluwatoyin Ariyo CV
      <li>Playing indie single player games.</li>
      <li>Volunteering as tech support to help people with software issues.</li>
      </ul>
-    <br>
-    <h2>Game Writing Samples</h2>
-    <p>Below is a link to a PDF showing a sample of the game writing that I have contributed to. These samples include writing done in interactive fiction and writing done for
-	    a game spec script.</p>
-    <a href="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Oluwatoyin Ariyo Game Writing Samples.pdf" class="downloadsample" title="Download writing samples as PDF">Download Game Writing Samples</a>
-    <p>If you'd like to see more game writing samples, do not hesistate to <a href="mailto:toyinariyo66@gmail.com">email me here.</a></p>
  </div>
