--- a/CV/index.html
+++ b/CV/index.html
@@ -4,7 +4,7 @@ title: Oluwatoyin Ariyo CV
 ---
 
 <div class="cv">
-		<a href="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Oluwatoyin Ariyo Game Designer & Narrative Designer CV.pdf" class="download" title="Download CV as PDF">Download CV</a>	
+		<a href="https://raw.githubusercontent.com/toyinariyo/toyinariyo.github.io/main/assets/Oluwatoyin Ariyo Software Developer CV.pdf" class="download" title="Download CV as PDF">Download CV</a>	
 	<h1>Oluwatoyin Ariyo</h1>
     <h2>Skills</h2>
     <ul>
