Removing game developer mention

--- a/index.html
+++ b/index.html
@@ -4,6 +4,5 @@ title: Oluwatoyin Ariyo
 ---	
 <div class="blurb">
         <h1>Hi, I'm Oluwatoyin Ariyo but you can call me Toyin Ariyo!</h1>
-	<p>I'm a game designer + software developer that enjoys creating compelling, interactive narrative games, which can be found <a href="/Games">here.</a></p>
+	<p>I am a software developer that enjoys creating various projects, which can be found <a href="https://github.com/toyinariyo">here.</a></p>
 </div><!-- /.blurb -->
-<p>I have also created various non-game projects which can be found <a href="https://github.com/toyinariyo">here.</a></p>
